# Click

./: Cargo.toml  LGPL License.txt  README.md  main.py  main.qml  main.spec  pyproject.toml  qml_main.py  requirements.txt  tasks.json
ClickSever/: Cargo.toml
ClickSever/src/: main.rs
assets/: setup.iss
src/: lib.rs
src/core/: __init__.py  core.py  file_deal.py  global_fn.py
src/gui/: __init__.py  about_page.py  cpu_monitor.py  gpu_monitor.py  office_cc.py  rely.py  resourcesAssets.qrc  root.py  set_up.py
src/gui/qss/: dark_style.py  light_style.py  monitor_normal.py  normal_style.py  titleQSS.py
