[package]
name = "Click_pro"
version = "0.1.0"
edition = "2021"
#![windows_subsystem = "windows"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "click_rust_depends"
crate-type = ["cdylib"]

[dependencies]
sysinfo = "0.35.0"
pyo3 = { version = "0.25.0", features = ["extension-module"] }
rand = "0.9.1"
winapi = { version = "0.3.9", features = ["processthreadsapi", "handleapi", "ntdef", "winnt"] }
nvml-wrapper= "0.10.0"